# pyglms

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yaml
data/: poisson_test_data.csv  source.txt
examples/: logreg_example.ipynb  mlr_example.ipynb  poissonreg_example.ipynb
scripts/: env.sh  tests.sh
turtles/: __init__.py  _utils.py
turtles/plotting/: __init__.py  _plotting.py
turtles/plotting/tests/: test_plotting.py
turtles/preprocess/: __init__.py  _transform.py
turtles/preprocess/tests/: test_transform.py
turtles/stats/: __init__.py  _stats.py
turtles/stats/glms/: __init__.py  _base.py  _logreg.py  _mlr.py  _poisson.py  _validation.py  _warnings.py
turtles/stats/glms/tests/: test_logreg.py  test_mlr.py  test_poissonreg.py  test_validation.py
turtles/stats/tests/: test_stats.py
turtles/tests/: test_utils.py
