[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turtles"
version = "0.1.0"
requires-python = ">= 3.9"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scipy>=1.13.1",
    "matplotlib>=3.9.4",
    "pydantic>=2.10.6"
]
description = "GLMs in Python."
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = ["Programming Language :: Python :: 3.12"]

authors = [
    {name = "Adam Motzel", email = "motzel.adam@gmail.com"}
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "*tests*", "examples"]
